test(payment-controller): add basic tests for payment creation, modification, and retrieval